--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,6 +1,8 @@
 <h2>{{ site.data.navigation.docs_list_title }}</h2>
+<nav>
 <ul>
    {% for item in site.data.navigation.docs %}
       <li><a href="{{ item.url }}">{{ item.title }}</a></li>
    {% endfor %}
 </ul>
+</nav>
