Revert includes to gem file version

--- a/_layout/default.html
+++ b/_layout/default.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="{{ page.lang | default: site.lang | default: "en" }}">
 
+  {%- include head.html -%}
 
-    <head>
-        <title>{{ page.title }}</title>
-        <!-- Other head elements like CSS links go here -->
-    </head>
-    <body>
-        {% include nav.html %}
+  <body>
 
-        <div class="content">
+    {%- include header.html -%}
+
+    <main class="page-content" aria-label="Content">
+      <div class="wrapper">
         {{ content }}
-        </div>
+      </div>
+    </main>
 
-        <!-- Footer or other elements -->
-    </body>
+    {%- include footer.html -%}
+
+  </body>
+
 </html>
